added library facts for xstream and added tests to confirm behavior as is